

                              KijiMR Release Notes

Version 1.0.0-rc6

Version 1.0.0-rc5
  * Initial release.